intel/bench_25/extr_os-tutorial14-checkpointkernelkernel.c_main/log.txt
bench_25/extr_os-tutorial14-checkpointkernelkernel.c_main/extr_os-tutorial14-checkpointkernelkernel.c_main.c:7:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_25/extr_os-tutorial14-checkpointkernelkernel.c_main/extr_os-tutorial14-checkpointkernelkernel.c_main.c:17:1: error: 'main' must return 'int'
void main() {
^~~~
int
2 errors generated.
HLS FPGA Parse FAILED.
